manifests/resilient-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resilient-app
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: resilient-app
  template:
    metadata:
      labels:
        app: resilient-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: resilient-app
  namespace: default
spec:
  selector:
    app: resilient-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
